<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:srcCompat="@drawable/new_blue_vectors_without_words3094__1_" />

    <LinearLayout
        android:id="@+id/selectDifficulty"
        android:layout_width="410dp"
        android:layout_height="396dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">

            <Button
                android:id="@+id/buttonEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00B9F1"
                android:text="@string/d1" />

            <Button
                android:id="@+id/buttonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:text="@string/d2" />

            <Button
                android:id="@+id/buttonAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFC107"
                android:text="@string/d3" />

            <Button
                android:id="@+id/buttonArranged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FD3636"
                android:text="@string/d4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#673AB7"
                android:text="@string/abg" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startingScreen"
        android:layout_width="411dp"
        android:layout_height="727dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/touchScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touchStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.569" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/gamelogo123"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:gravity="center"
        android:text="@string/tmk"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <LinearLayout
        android:id="@+id/aboutLayout"
        android:layout_width="351dp"
        android:layout_height="489dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/aboutText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/finishAbout"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Okay" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>